--- a/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
+++ b/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
@@ -1,27 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Build">
 	<PropertyGroup>
 		<!-- General build information -->
-		<ProjectGuid>{6872448A-98BF-45B3-88D8-AF80F8E562CA}</ProjectGuid>
-
+		<Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<Deterministic>true</Deterministic>
 		<FileAlignment>512</FileAlignment>
 		<OutputType>Library</OutputType>
+		<Platforms>x64</Platforms>
+		<PlatformTarget>x64</PlatformTarget>
+		<ProjectGuid>{6872448A-98BF-45B3-88D8-AF80F8E562CA}</ProjectGuid>
 		<TargetFrameworks>net48</TargetFrameworks>
 
-		<!-- Removes the localized Microsoft.CodeAnalysis.*.resources.dll -->
+		<AllowedReferenceRelatedFileExtensions>.pdb</AllowedReferenceRelatedFileExtensions>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-
-		<Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
-		<PlatformTarget>x64</PlatformTarget>
-		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup>
 		<!-- User defined properties -->
 		<Product>Carbon.Doorstop</Product>
-		<AssemblyName>Carbon.Doorstop</AssemblyName>
+		<AssemblyName>$(Product)</AssemblyName>
 
-		<Company>Carbon Community</Company>
+		<Company>Raul-Sorin Sorban</Company>
 		<Copyright>Copyright © 2022 Carbon Community</Copyright>
 		<PackageProjectUrl>https://discord.gg/eXPcNKK4yd</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Carbon-Modding/Carbon.Core</RepositoryUrl>
@@ -30,18 +31,42 @@
 
 	<PropertyGroup>
 		<!-- Automatically generated properties -->
-		<VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
-		<VersionSuffix>$(Configuration)</VersionSuffix>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(VersionPrefix)</FileVersion>
-		<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_")).Core</RootNamespace>
 		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.ddMM')).10</Version>
+		<VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
+		<VersionSuffix>$(Configuration)</VersionSuffix>
+
+		<Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
+		<Platform Condition="'$(Platform)' == ''">x64</Platform>
 	</PropertyGroup>
 
-	<PropertyGroup>
-		<OutputPath>bin\$(Configuration)\</OutputPath>
-	</PropertyGroup>
+	<Choose>
+		<When Condition="Exists('.gitag')">
+			<PropertyGroup>
+				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)$([System.IO.File]::ReadAllText('$(SolutionDir)$(Product)\.gitag').Trim())</InformationalVersion>
+			</PropertyGroup>
+		</When>
+		<Otherwise>
+			<PropertyGroup>
+				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+			</PropertyGroup>
+		</Otherwise>
+	</Choose>
+
+	<Choose>
+		<When Condition="Exists('.rndasm') AND $(Configuration.Contains('Debug'))">
+			<PropertyGroup>
+				<AssemblyName>$([System.IO.File]::ReadAllText('$(SolutionDir)$(Product)\.rndasm').Trim())</AssemblyName>
+			</PropertyGroup>
+		</When>
+		<Otherwise>
+			<PropertyGroup>
+				<AssemblyName>$(Product)</AssemblyName>
+			</PropertyGroup>
+		</Otherwise>
+	</Choose>
 
 	<Choose>
 		<When Condition="$(Configuration.Contains('Release'))">
@@ -57,6 +82,7 @@
 			<PropertyGroup>
 				<DebugType>embedded</DebugType>
 				<DefineConstants>DEBUG;UNITY_ASSERTIONS;$(DefineConstants)</DefineConstants>
+				<OutputPath>bin\$(Configuration)\</OutputPath>
 				<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 			</PropertyGroup>
 		</Otherwise>
@@ -71,7 +97,7 @@
 			<ItemGroup>
 				<!-- Facepunch game files for Linux -->
 				<Reference Include="..\..\Rust\linux\RustDedicated_Data\Managed\Rust.Harmony.dll">
-					<PrivateAssets>all</PrivateAssets>
+					<Private>false</Private>
 				</Reference>
 			</ItemGroup>
 		</When>
@@ -82,56 +108,107 @@
 		</Otherwise>
 	</Choose>
 
-	<ItemGroup>		<!-- System libs -->
+	<ItemGroup>
+		<!-- System libs -->
+		<Reference Include="Microsoft.CSharp" />
+		<Reference Include="System.Buffers" />
+		<Reference Include="System.Collections.Immutable" />
+		<Reference Include="System.Core" />
+		<Reference Include="System.Data.SQLite" />
+		<Reference Include="System.Data" />
+		<Reference Include="System.Drawing.Design" />
+		<Reference Include="System.Drawing" />
+		<Reference Include="System.IO.Compression.FileSystem" />
+		<Reference Include="System.Memory" />
+		<Reference Include="System.Numerics.Vectors" />
+		<Reference Include="System.Reflection.Metadata" />
+		<Reference Include="System.Runtime.CompilerServices.Unsafe" />
+		<Reference Include="System.Text.Encoding.CodePages" />
+		<Reference Include="System.Threading.Tasks.Extensions" />
+		<Reference Include="System.Xml" />
 		<Reference Include="System" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- Nuget packages -->
-		<PackageReference Include="Costura.Fody" Version="5.7.0">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
+		<!-- Assembly weaver -->
+		<PackageReference Include="Costura.Fody" Version="5.7.0"/>
 
-		<PackageReference Include="Mono.Cecil" Version="0.11.4">
-		</PackageReference>
+		<!-- Assembly editor -->
+		<PackageReference Include="Mono.Cecil" Version="0.11.4"/>
 	</ItemGroup>
 
-	<!-- ========================== -->
-	<!-- BUILD TASK SEQUENCER BELOW -->
-	<!-- ========================== -->
-	<Target Name="CleanOutput" AfterTargets="Clean">
-		<Delete Files="$(OutputPath)Carbon.Doorstop.dll" />
-		<Delete Files="$(OutputPath)$(TargetName).dll" />
+
+	<!-- ============================ -->
+	<!--  CLEAN ADDITONAL FILES TASK  -->
+	<!-- ============================ -->
+	<Target Name="CleanOutputPath" AfterTargets="Clean">
+		<Message Text="&gt;&gt; Removing files from $(OutputPath)" Importance="high" />
+		<Delete Files="$(OutputPath)$(Product).dll" />
+		<Delete Files="$(OutputPath)$(Product)-*.dll" />
 	</Target>
 
-	<Target Name="CustomPrepareForBuild" AfterTargets="_GenerateRestoreProjectSpec">
+	<!-- =============================== -->
+	<!--  GENERATE RANDOM ASM NAME TASK  -->
+	<!-- =============================== -->
+	<Target Name="RandomASMNameGenerator" AfterTargets="_GenerateRestoreProjectSpec">
 		<PropertyGroup>
 			<RandomASM>$(Product)-$([System.DateTime]::UtcNow.ToString('HHmmfff'))</RandomASM>
 		</PropertyGroup>
-		<WriteLinesToFile File="$(SolutionDir)Carbon.Doorstop\.rndasm" Overwrite="true" Lines="$(RandomASM)" />
+
+		<Exec Command="git branch --show-current" ConsoleToMSBuild="true" StandardOutputImportance="low">
+			<Output TaskParameter="ConsoleOutput" PropertyName="GitBranch" />
+		</Exec>
+
+		<Exec Command="git rev-parse --short HEAD" ConsoleToMSBuild="true" StandardOutputImportance="low">
+			<Output TaskParameter="ConsoleOutput" PropertyName="GitCommitHash" />
+		</Exec>
+
+		<PropertyGroup>
+			<Gitag>-$(GitBranch)-$(GitCommitHash)</Gitag>
+		</PropertyGroup>
+
+		<WriteLinesToFile File="$(SolutionDir)$(Product)\.gitag" Overwrite="true" Lines="$(Gitag)" />
+		<WriteLinesToFile File="$(SolutionDir)$(Product)\.rndasm" Overwrite="true" Lines="$(RandomASM)" />
 	</Target>
 
+	<!-- ========================== -->
+	<!--  PRINT BUILD CONTEXT TASK  -->
+	<!-- ========================== -->
 	<Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+		<Message Text="&gt;&gt; Product: $(Product)" Importance="high" />
+		<Message Text="&gt;&gt; Runtime: $(MSBuildRuntimeType)" Importance="high" />
 		<Message Text="&gt;&gt; Build ID: $(InformationalVersion)" Importance="high" />
 		<Message Text="&gt;&gt; Build Target: $(Configuration)|$(Platform)" Importance="high" />
 		<Message Text="&gt;&gt; Build Assembly Name: $(AssemblyName)" Importance="high" />
 		<Message Text="&gt;&gt; Build Constants: $(DefineConstants)" Importance="high" />
 	</Target>
 
-	<Target Name="CustomAfterBuild" AfterTargets="AfterBuild">
-		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)Carbon.Doorstop.dll" />
-
-		<ItemGroup>
-			<FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)Carbon.Doorstop.dll;$(OutputPath)Carbon.Doorstop-*.dll" />
-		</ItemGroup>
-
-		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
-		<Delete Files="@(FilesToDelete)">
-			<Output TaskParameter="DeletedFiles" ItemName="FilesDeleted" />
-		</Delete>
+	<!-- ================================ -->
+	<!--  RENAME THE BUILD ARTIFACT TASK  -->
+	<!-- ================================ -->
+	<Target Name="RenameBuildOutput" AfterTargets="PostBuildEvent">
+		<Message Text="&gt;&gt; Rename the build artifact from '$(OutputPath)$(TargetName).dll' to '$(OutputPath)$(Product).dll'" Importance="high" />
+		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)$(Product).dll" />
+		<Delete Files="$(OutputPath)$(TargetName).dll" />
 	</Target>
 
-	<PropertyGroup Condition="Exists('.rndasm') AND $(Configuration.Contains('Debug'))">
-		<AssemblyName>$([System.IO.File]::ReadAllText('$(SolutionDir)Carbon.Doorstop\.rndasm').Trim())</AssemblyName>
-	</PropertyGroup>
+	<!-- ========================== -->
+	<!--  CLEAN OUTPUT FOLDER TASK  -->
+	<!-- ========================== -->
+	<Target Name="CleanOutputFolder" AfterTargets="RenameBuildOutput">
+		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
+
+		<ItemGroup>
+			<FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(Product).dll" />
+			<FilesToDelete Include="$(OutputPath)0Harmony.dll" />
+			<FilesToDelete Include="$(OutputPath)Assembly-*.dll" />
+			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
+			<FilesToDelete Include="$(OutputPath)Fleck.dll" />
+			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
+			<FilesToDelete Include="$(OutputPath)Rust.*.dll" />
+			<FilesToDelete Include="$(OutputPath)UnityEngine*.dll" />
+		</ItemGroup>
+
+		<Delete Files="@(FilesToDelete)" />
+	</Target>
 </Project>
