--- a/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
+++ b/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
@@ -143,7 +143,9 @@
 
 	<ItemGroup>
 		<!-- Assembly weaver -->
-		<PackageReference Include="Costura.Fody" Version="5.7.0"/>
+		<PackageReference Include="Costura.Fody" Version="5.7.0">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 
@@ -195,7 +197,7 @@
 	<!-- ================================ -->
 	<!--  RENAME THE BUILD ARTIFACT TASK  -->
 	<!-- ================================ -->
-	<Target Name="RenameBuildOutput" AfterTargets="PostBuildEvent">
+	<Target Name="RenameBuildOutput" AfterTargets="PostBuildEvent" Condition="$(Configuration.Contains('Debug'))">
 		<Message Text="&gt;&gt; Rename the build artifact from '$(OutputPath)$(TargetName).dll' to '$(OutputPath)$(Product).dll'" Importance="high" />
 		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)$(Product).dll" />
 		<Delete Files="$(OutputPath)$(TargetName).dll" />
