--- a/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
+++ b/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
@@ -16,6 +16,9 @@
 		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+
+		<!-- Forces the execution of our own repack process-->
+		<DoILRepack>false</DoILRepack>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -93,26 +96,14 @@
 		<When Condition="$(Configuration.Contains('Unix'))">
 			<PropertyGroup>
 				<DefineConstants>UNIX;$(DefineConstants)</DefineConstants>
+				<FullNameOS>linux</FullNameOS>
 			</PropertyGroup>
-
-			<ItemGroup>
-				<!-- Facepunch game files for Linux -->
-				<Reference Include="..\..\Rust\linux\RustDedicated_Data\Managed\*.dll">
-					<Private>false</Private>
-				</Reference>
-			</ItemGroup>
 		</When>
 		<Otherwise>
 			<PropertyGroup>
 				<DefineConstants>WIN;$(DefineConstants)</DefineConstants>
+				<FullNameOS>windows</FullNameOS>
 			</PropertyGroup>
-
-			<ItemGroup>
-				<!-- Facepunch game files for Windows -->
-				<Reference Include="..\..\Rust\windows\RustDedicated_Data\Managed\*.dll">
-					<Private>false</Private>
-				</Reference>
-			</ItemGroup>
 		</Otherwise>
 	</Choose>
 
@@ -129,17 +120,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- External resources -->
-		<Reference Include="..\..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll"/>
-	</ItemGroup>
+		<!-- Facepunch game files for Linux -->
+		<Reference Include="$(SolutionDir)..\Rust\$(FullNameOS)\RustDedicated_Data\Managed\*.dll" Private="false" />
 
-	<ItemGroup>
+		<!-- HarmonyLib v2 -->
+		<Reference Include="$(SolutionDir)..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll" />
+
+		<!-- IL repacker -->
+		<PackageReference Include="ILRepack.Lib.MSBuild" Version="2.1.14" PrivateAssets="all" />
+
 		<!-- Assembly weaver -->
-		<PackageReference Include="Costura.Fody" Version="5.7.0">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
+		<PackageReference Include="Costura.Fody" Version="5.7.0" PrivateAssets="all" />
 	</ItemGroup>
-
 
 	<!-- ============================ -->
 	<!--  CLEAN ADDITONAL FILES TASK  -->
@@ -178,6 +170,7 @@
 	<!--  PRINT BUILD CONTEXT TASK  -->
 	<!-- ========================== -->
 	<Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+		<Message Text="--" Importance="high" />
 		<Message Text="&gt;&gt; Product: $(Product)" Importance="high" />
 		<Message Text="&gt;&gt; Runtime: $(MSBuildRuntimeType)" Importance="high" />
 		<Message Text="&gt;&gt; Build ID: $(InformationalVersion)" Importance="high" />
@@ -195,23 +188,40 @@
 		<Delete Files="$(OutputPath)$(TargetName).dll" />
 	</Target>
 
-	<!-- ========================== -->
-	<!--  CLEAN OUTPUT FOLDER TASK  -->
-	<!-- ========================== -->
-	<Target Name="CleanOutputFolder" AfterTargets="RenameBuildOutput">
-		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
-
+	<!-- ================ -->
+	<!--  IL REPACK TASK  -->
+	<!-- ================ -->
+	<Target Name="RunILRepack" AfterTargets="RenameBuildOutput" Condition="false">
 		<ItemGroup>
-			<!-- <FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(Product).dll" /> -->
-			<FilesToDelete Include="$(OutputPath)0Harmony.dll" />
-			<FilesToDelete Include="$(OutputPath)Assembly-*.dll" />
-			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
-			<FilesToDelete Include="$(OutputPath)Fleck.dll" />
-			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
-			<FilesToDelete Include="$(OutputPath)Rust.*.dll" />
-			<FilesToDelete Include="$(OutputPath)UnityEngine*.dll" />
+			<ILRepackInputAssemblies Include="$(OutputPath)*.dll" />
+			<ILRepackAllLibPath Include="$(OutputPath)" />
+			<ILRepackAllLibPath Include="$(SolutionDir)..\Rust\$(FullNameOS)\RustDedicated_Data\Managed" />
 		</ItemGroup>
 
-		<Delete Files="@(FilesToDelete)" />
+		<ILRepack Parallel="true" Internalize="true" DebugInfo="true" AllowDuplicateResources="false" InputAssemblies="@(ILRepackInputAssemblies)" LibraryPath="@(ILRepackAllLibPath)" TargetKind="SameAsPrimaryAssembly" OutputFile="$(OutputPath)$(Product)$(TargetExt)" />
+	</Target>
+
+	<!-- ============================= -->
+	<!--  PREPARE THE RELEASE PACKAGE  -->
+	<!-- ============================= -->
+	<Target Name="PrepareRelease" AfterTargets="RunILRepack">
+		<PropertyGroup>
+			<CarbonBaseDir>$(SolutionDir)..\Release\.tmp\$(Configuration)</CarbonBaseDir>
+			<c_harmony>$(CarbonBaseDir)\HarmonyMods</c_harmony>
+			<c_lib>$(CarbonBaseDir)\carbon\managed\lib</c_lib>
+			<c_managed>$(CarbonBaseDir)\carbon\managed</c_managed>
+			<c_tools>$(CarbonBaseDir)\carbon\tools</c_tools>
+		</PropertyGroup>
+
+		<ItemGroup>
+			<FilesToCopy Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(Product).dll;$(OutputPath)0Harmony.dll;$(OutputPath)Assembly-*.dll;$(OutputPath)Facepunch.*.dll;$(OutputPath)Fleck.dll;$(OutputPath)Facepunch.*.dll;$(OutputPath)Rust.*.dll;$(OutputPath)UnityEngine*.dll" />
+		</ItemGroup>
+
+		<Message Text="&gt;&gt; Create the release folders at '$(CarbonBaseDir)'" Importance="high" />
+		<MakeDir Directories="$(CarbonBaseDir);$(c_harmony);$(c_lib);$(c_managed);$(c_tools)" />
+
+		<Message Text="&gt;&gt; Copy files to release folder" Importance="high" />
+		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_harmony)" />
+		<Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(c_lib)\%(RecursiveDir)" />
 	</Target>
 </Project>
