--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -96,7 +96,7 @@
 
 			<ItemGroup>
 				<!-- Facepunch game files for Linux -->
-				<Reference Include="..\..\Rust\linux\RustDedicated_Data\Managed\*.dll">
+				<Reference Include="$(SolutionDir)..\Rust\linux\RustDedicated_Data\Managed\*.dll">
 					<Private>false</Private>
 				</Reference>
 			</ItemGroup>
@@ -108,7 +108,7 @@
 
 			<ItemGroup>
 				<!-- Facepunch game files for Windows -->
-				<Reference Include="..\..\Rust\windows\RustDedicated_Data\Managed\*.dll">
+				<Reference Include="$(SolutionDir)..\Rust\windows\RustDedicated_Data\Managed\*.dll">
 					<Private>false</Private>
 				</Reference>
 			</ItemGroup>
@@ -128,22 +128,17 @@
 
 	<ItemGroup>
 		<!-- External resources -->
-		<Reference Include="..\..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll"/>
+		<Reference Include="$(SolutionDir)..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- Assembly weaver -->
-		<PackageReference Include="Costura.Fody" Version="5.7.0">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-
 		<!-- Required by Carbon's Logger -->
-		<PackageReference Include="Ben.Demystifier" Version="0.4.1"/>
+		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 
 		<!-- Required by Carbon's Compiler -->
-		<PackageReference Include="protobuf-net.Core" Version="3.1.17"/>
-		<PackageReference Include="protobuf-net" Version="3.1.17"/>
-		<PackageReference Include="Roslynator.CSharp" Version="4.1.1"/>
+		<PackageReference Include="protobuf-net.Core" Version="3.1.17" />
+		<PackageReference Include="protobuf-net" Version="3.1.17" />
+		<PackageReference Include="Roslynator.CSharp" Version="4.1.1" />
 
 		<!-- Required by Carbon's Database support -->
 		<PackageReference Include="MySql.Data" Version="8.0.31" />
@@ -188,6 +183,7 @@
 	<!--  PRINT BUILD CONTEXT TASK  -->
 	<!-- ========================== -->
 	<Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+		<Message Text="--" Importance="high" />
 		<Message Text="&gt;&gt; Product: $(Product)" Importance="high" />
 		<Message Text="&gt;&gt; Runtime: $(MSBuildRuntimeType)" Importance="high" />
 		<Message Text="&gt;&gt; Build ID: $(InformationalVersion)" Importance="high" />
@@ -205,23 +201,28 @@
 		<Delete Files="$(OutputPath)$(TargetName).dll" />
 	</Target>
 
-	<!-- ========================== -->
-	<!--  CLEAN OUTPUT FOLDER TASK  -->
-	<!-- ========================== -->
-	<Target Name="CleanOutputFolder" AfterTargets="RenameBuildOutput">
-		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
+	<!-- ============================= -->
+	<!--  PREPARE THE RELEASE PACKAGE  -->
+	<!-- ============================= -->
+	<Target Name="PrepareRelease" AfterTargets="RenameBuildOutput">
+		<PropertyGroup>
+			<CarbonBaseDir>$(SolutionDir)..\Release\.tmp\$(Configuration)</CarbonBaseDir>
+			<c_harmony>$(CarbonBaseDir)\HarmonyMods</c_harmony>
+			<c_lib>$(CarbonBaseDir)\carbon\managed\lib</c_lib>
+			<c_managed>$(CarbonBaseDir)\carbon\managed</c_managed>
+			<c_tools>$(CarbonBaseDir)\carbon\tools</c_tools>
+		</PropertyGroup>
 
 		<ItemGroup>
-			<!--<FilesToDelete Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(Product).dll" />-->
-			<FilesToDelete Include="$(OutputPath)0Harmony.dll" />
-			<FilesToDelete Include="$(OutputPath)Assembly-*.dll" />
-			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
-			<FilesToDelete Include="$(OutputPath)Fleck.dll" />
-			<FilesToDelete Include="$(OutputPath)Facepunch.*.dll" />
-			<FilesToDelete Include="$(OutputPath)Rust.*.dll" />
-			<FilesToDelete Include="$(OutputPath)UnityEngine*.dll" />
+			<FilesToCopy Include="$(OutputPath)*.dll" Exclude="$(OutputPath)$(Product).dll;$(OutputPath)0Harmony.dll;$(OutputPath)Assembly-*.dll;$(OutputPath)Facepunch.*.dll;$(OutputPath)Fleck.dll;$(OutputPath)Facepunch.*.dll;$(OutputPath)Rust.*.dll;$(OutputPath)UnityEngine*.dll" />
 		</ItemGroup>
 
-		<Delete Files="@(FilesToDelete)" />
+		<Message Text="&gt;&gt; Create the release folders at '$(CarbonBaseDir)'" Importance="high" />
+		<MakeDir Directories="$(CarbonBaseDir);$(c_harmony);$(c_lib);$(c_managed);$(c_tools)" />
+
+		<Message Text="&gt;&gt; Copy files to release folder" Importance="high" />
+		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_managed)" Condition="!$(Configuration.Contains('Unix'))" />
+		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFiles="$(c_managed)\$(Product)-Unix.dll" Condition="$(Configuration.Contains('Unix'))" />
+		<Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(c_lib)\%(RecursiveDir)" />
 	</Target>
 </Project>
