--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -28,8 +28,8 @@ jobs:
       wipe:  ${{ steps.step1.outputs.wipe }}
 
     steps:
-      - name: 🪵 Log environment
-        uses: crazy-max/ghaction-dump-context@v1
+      #- name: 🪵 Log environment
+      #  uses: crazy-max/ghaction-dump-context@v1
 
       - name: 🔗 Checkout source code from github
         uses: actions/checkout@v3
@@ -39,11 +39,11 @@ jobs:
       - name: 📅 Prepare the environment
         id: step1
         run: |
-          echo "::set-output name=date::$(date +'%Y-%m-%d')"
-          echo "::set-output name=clock::$(date +'%H:%M:%S')"
-          echo "::set-output name=tag::$(date +'%Yd%j')"
-          echo "::set-output name=ref::$(git rev-parse --short HEAD)"
-          echo "::set-output name=wipe::$( [ $(date +%u) -eq 4 ] && [ $(date +%d) -le 7 ] && echo true || echo false )"
+          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "clock=$(date +'%H:%M:%S')" >> $GITHUB_OUTPUT
+          echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
+          echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "wipe=$( [ $(date +%u) -eq 4 ] && [ $(date +%d) -le 7 ] && echo true || echo false )" >> $GITHUB_OUTPUT
 
   build-linux:
     name: 🐧 Linux
