--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -27,8 +27,8 @@ jobs:
       ref:   ${{ steps.step1.outputs.ref }}
 
     steps:
-      - name: 🪵 Log environment
-        uses: crazy-max/ghaction-dump-context@v1
+      #- name: 🪵 Log environment
+      #  uses: crazy-max/ghaction-dump-context@v1
 
       - name: 🔗 Checkout source code from github
         uses: actions/checkout@v3
@@ -38,10 +38,10 @@ jobs:
       - name: 📅 Prepare the environment
         id: step1
         run: |
-          echo "::set-output name=date::$(date +'%Y-%m-%d')"
-          echo "::set-output name=clock::$(date +'%H:%M:%S')"
-          echo "::set-output name=tag::$(date +'%Yd%j')"
-          echo "::set-output name=ref::$(git rev-parse --short HEAD)"
+          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "clock=$(date +'%H:%M:%S')" >> $GITHUB_OUTPUT
+          echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
+          echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
   build-linux:
     name: 🐧 Linux
