--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -131,6 +131,14 @@ jobs:
       with:
         name: ${{ needs.build-linux.outputs.artifact }}
         path: Release/
+        
+    - name: 🗑️ Delete existing release tag
+      uses: dev-drprasad/delete-tag-and-release@v0.2.0
+      with:
+        delete_release: true
+        tag_name: develop_build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: 🏷️ Update release tag
       uses: softprops/action-gh-release@v1
