--- a/Carbon.Core/msbuild/200-Clean.targets
+++ b/Carbon.Core/msbuild/200-Clean.targets
@@ -8,15 +8,17 @@
 		<RemoveDir Directories="$(OutputPath)" />
 	</Target>
 
-	<!-- ================================ -->
-	<!--  RENAME THE BUILD ARTIFACT TASK  -->
-	<!-- ================================ -->
+	<!-- ===================== -->
+	<!--  POST BUILD EVENT #1  -->
+	<!-- ===================== -->
 	<Target Name="CarbonPostBuildEvent1" AfterTargets="PostBuildEvent" Condition="'$(TargetName).dll' != '$(Product).dll'">
 		<Message Text="[$(AssemblyName)] &gt;&gt; Rename the build artifact from '$(OutputPath)$(TargetName).dll' to '$(OutputPath)$(Product).dll'" Importance="high" />
 		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)$(Product).dll" />
-		<Delete Files="$(OutputPath)$(TargetName).dll" />
 	</Target>
 
+	<!-- ===================== -->
+	<!--  POST BUILD EVENT #2  -->
+	<!-- ===================== -->
 	<Target Name="CarbonPostBuildEvent2" AfterTargets="PostBuildEvent">
 		<ItemGroup>
 			<RustManaged Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\*.dll" />
