--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -5,12 +5,15 @@
 		<ProjectGuid>{DB7AC4B9-E0F3-4E8F-B977-DD32709359A4}</ProjectGuid>
 	</PropertyGroup>
 
-	<Import Project="$(SolutionDir)msbuild\100-Common.props" />
-	<Import Project="$(SolutionDir)msbuild\100-AssemblyName.props" />
+	<Import Project="..\.msbuild\props\Common.props" />
+	<Import Project="..\.msbuild\props\AssemblyName.props" />
 
 	<ItemGroup>
 		<!-- Carbon platform -->
-		<ProjectReference Include="$(SolutionDir)Carbon.Loader\Carbon.Loader.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Carbon.Loader\Carbon.Loader.csproj" />
+
+		<!-- HarmonyLib using a custom name -->
+		<Reference Include="$(SolutionDir)..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll" Private="false" Aliases="DummyHarmony" />
 
 		<!-- Required by Carbon's Logger -->
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
@@ -23,11 +26,6 @@
 		<!-- Required by Carbon's Database support -->
 		<PackageReference Include="MySql.Data" Version="8.0.31" />
 		<PackageReference Include="System.Data.SQLite.Core" Version="1.0.116" />
-
-		<!-- Extra packages -->
-		<!-- <PackageReference Include="Lib.Harmony" Version="2.2.2" /> -->
-
-		<Reference Include="$(SolutionDir)..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll" />
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
