--- a/Carbon.Core/.msbuild/props/Configurations.props
+++ b/Carbon.Core/.msbuild/props/Configurations.props
@@ -44,11 +44,12 @@
 		<Reference Include="System.Data" />
 		<Reference Include="System.Drawing.Design" />
 		<Reference Include="System.Drawing" />
+		<Reference Include="System.Globalization" />
 		<Reference Include="System.IO.Compression.FileSystem" />
 		<Reference Include="System.Xml" />
 		<Reference Include="System" />
 
 		<!-- Facepunch game files -->
-		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\*.dll" Private="true" />
+		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\*.dll" Private="false" />
 	</ItemGroup>
 </Project>
